--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     </div>
 
 
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.10.0/rellax.min.js" charset="utf-8"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/rellax/1.12.1/rellax.min.js" integrity="sha256-+xf9aJnHocnmrigq2hIDJGBSAnJdF5NH+Ooe5J2PHiI=" crossorigin="anonymous"></script>
       <script src="script.js" charset="utf-8"></script>
-      
+
   </body>
 </html>
